# legal

./: .gitignore  AGENTS.md  README.md  pyproject.toml
agent_skills/cloudzy-deployment/: SKILL.md  install.sh
agent_skills/legal-mcp-deployment/: SKILL.md  install.sh
api/: __init__.py  auth.py  errors.py  main.py  models.py  runner.py  settings.py
api/routers/: __init__.py  csjn.py  discovery.py  generic.py  saij.py  search.py
deploy/: bootstrap.py  cloudzy_cli.py  deploy.env.example  deploy.py  deploy_domain.sh  domain.py  ngrok.py  secrets.py  smoke_codex.py
docs/: DEPLOYMENT.md  MCP_DEPLOYMENT.md  MCP_READINESS.md
legal/: __init__.py  __main__.py  browser.py  cache.py  captcha.py  cli.py  config.py  dispatch.py  enrichment.py  errors.py  global_search.py  http.py  local_config.example.py  models.py  pagination.py  parsing.py  pdf.py  registry.py  schema.py  secret.example.py  settings.py
legal/docs/: README.md  aaip_disposiciones.md  bcra_normativa.md  boletin_oficial_nacional.md  boletin_oficial_pba.md  cnacaf_jurisprudencia.md  csjn_jurisprudencia.md  dppj_resoluciones.md  igj_resoluciones.md  infoleg_normas_nacionales.md  juba_scba.md  jusbaires_jurisprudencia.md  normas_pba.md  pjn_expedientes.md  pjn_jurisprudencia.md  ptn_dictamenes.md  sentencias_scba.md  (+2 more)
legal_deploy/: __init__.py  bootstrap.py  cloudzy.py  cloudzy_cli.py  deploy.env.example  deploy.py  deploy_domain.sh  ngrok.py  smoke_codex.py
mcp_server/: __init__.py  auth.py  documents.py  main.py  serialization.py  settings.py  tools.py
server/: main.py  settings.py
tests/: conftest.py
(+107 files in other folders)
